サイトURL更新

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dangom-ya.github.io"
+baseURL = "https://hayashiyasuhito.github.io/dangom-ya/"
 languageCode = "ja"
 title = "林 靖人 / Yasuhito Hayashi"
 contentDir = "content"
