--- a/data/awards_grants.yaml
+++ b/data/awards_grants.yaml
@@ -1,7 +1,7 @@
 -
   Date: 2021/04
   Title: 日本学術振興会(DC1)
-  link: https://www.jos-marbiol.com/post/海洋生物シンポジウム2021
+  link: https://www.jsps.go.jp/j-pd/index.html
 -
   Date: 2021/03
   Title: 海洋生物シンポジウム 優秀発表賞
@@ -20,9 +20,19 @@
 -
   Date: 2017/04
   Title: 先導的研究者体験プログラム(10万円)
+  link: https://www.are.tsukuba.ac.jp/
 -
   Date: 2015/04
   Title: 先導的研究者体験プログラム(7万円)
+  link: https://www.are.tsukuba.ac.jp/
 -
   Date: 2014/08
   Title: 文部科学大臣表彰
+-
+  Date: 2014/05
+  Title: Intel国際学生科学技術フェア2014 2等
+  link: https://www.societyforscience.org/press-release/intel-isef-2014-grand-award-winners/
+-
+  Date: 2013/12
+  Title: 高校生科学技術チャレンジ2013 文部科2013/12学大臣表彰
+  link: http://www.asahi.com/shimbun/jsec/jsec2013/winner.html
